plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.loan_org'
version = 'IAM-Service-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = true
        html.required = true
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/loan_org/identity_and_access_management/IdentityAndAccessManagementApplication.class'
            ])
        }))
    }
}

dependencies {

    // Starter implementations for SPRING (CORE dependencies)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Microservice registration (Netflix Eureka)
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

    // JWT library
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // Rate Limiter library
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.19.0'

    // Logging library
    implementation 'net.logstash.logback:logstash-logback-encoder:9.0'

    // Lombok Annotation Processor
    compileOnly             'org.projectlombok:lombok'
    annotationProcessor     'org.projectlombok:lombok'
    testCompileOnly         'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Test-related libraries
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.1.2"
    }
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}